2017-06-12  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py(HIRS2):

	- Add more aliases for referring to older satellites.

	* typhon/physics/units/em.py(SRF.estimate_band_coefficients):

	- In ad-hoc band correction estimate method, fix regular expression so
	that it works for older HIRS (before NOAA-10).  This contributes to
	the fix of HIRS FCDR #110.

2017-06-12  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py:

	- Add some of the flags used in HIRS/2, HIRS/3, HIRS/4.  For now only
	adding the flags I'm acting upon, others later.  Currently used for
	FCDR HIRS processing.  Note that to make full use of these flags you
	want to use Python 3.6, but it should be possible to use them in
	Python 3.5 as well, just more in a more limited way.

	* typhon/datasets/tovs.py(HIRSKLM.get_mask_from_flags):

	- Added note/reminder to self to migrate hardcoded bitmasks to flag
	positinos defined in _tovs_defs.py

2017-06-06  Oliver Lemke  <olemke@core-dump.info>

	* typhon/physics/em.py (planck, planck_wavelength, planck_wavenumber,
	rayleighjeans_wavelength, radiance2planckTb, radiance2rayleighjeansTb,
	frequency2wavelength, wavelength2frequency, wavelength2wavenumber,
	wavenumber2wavelength):

	Introduce a np.divide to avoid a runtime error being thrown if function
	is called with a float instead of an numpy array. Now for all such
	cases a numpy warning is consistently issued.

	This makes the functions behave in line with how numpy's / scipy's own
	functions work. If the user wants to suppress the warning, the
	means numpy offers itself should be used for this, e.g.:

	with np.errstate(divide='ignore'):
	    radiance2plancktb(f, r)

2017-06-04  Lukas Kluft  <lukas.kluft@gmail.com>

	* README.md: Added a short README file.

	The file is meant to give short instructions on how to get
	started when developing typhon.
	The common way to provide documentation is still Sphinx!

2017-05-31  Gerrit Holl  <g.holl@reading.ac.uk>
